<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecondLectureClasswork</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="br">Retourne a main</string>
    <string name="b1">Start A1</string>
    <string name="b2">Allez a A2</string>
    <string name="b3">Zu A3</string>
    <string name="b4">!Speical offer!</string>
    <string name="title_activity_activity1">Activity1</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="title_activity_activity3">Activity3</string>
    <string name="title_activity_activity4">Activity4</string>

</resources>
